--- a/ravenous/src/App.css
+++ b/ravenous/src/App.css
@@ -71,4 +71,7 @@
 .sort{
   display: flex;
   color: white;
+  justify-content: space-evenly;
+  text-decoration: underline;
+  align-items: center;
 }
