--- a/ravenous/src/App.css
+++ b/ravenous/src/App.css
@@ -60,8 +60,6 @@
   background-color: white;
   padding: 10px;
   margin: 20px;
-  display: flex;
-  justify-content: space-between;
 }
 .btn{
   background-color: rgba(252, 226, 113, 0.63);
@@ -74,4 +72,13 @@
   justify-content: space-evenly;
   text-decoration: underline;
   align-items: center;
+}
+.sort:hover{
+  color: blue;
+}
+.bus{
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  margin: 20;
 }
